--- a/frontend/website/styles/style.css
+++ b/frontend/website/styles/style.css
@@ -17,19 +17,18 @@
 }
 
 .Auth-form-container {
-    display: flex;
-    flex-direction: column;
+    /* display: flex; */
+    /* flex-direction: column; */
     /* align-items: center; */
     margin: 5vh;
-    margin-left: 50vh;
-    margin-right: 50vh;
     padding: 5vh;
     padding-left: 10vh;
     padding-right: 10vh;
     border: 1px solid #e2e8f0;
 
 }
+
 .MuiIconButton-root.Mui-selected {
-  background-color: #fff !important;
-  color: #007bff !important;
+    background-color: #fff !important;
+    color: #007bff !important;
 }
